Implement text binary search

--- a/src/BinarySearch/BinarySearch.csproj
+++ b/src/BinarySearch/BinarySearch.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\TextBinarySearch\animals.txt" />
+    <None Remove="Assets\TextBinarySearch\cars.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\TextBinarySearch\animals.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\TextBinarySearch\cars.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
