Improve style and organization of code

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,8 @@ $RECYCLE.BIN/
 .DS_Store
 
 _NCrunch*
+/.vs/AlgorithmsAndDataStructures/DesignTimeBuild/.dtbcache.v2
+/.vs/AlgorithmsAndDataStructures/v17/.futdcache.v2
+/.vs/AlgorithmsAndDataStructures/v17/.suo
+/.vs/ProjectEvaluation/algorithmsanddatastructures.metadata.v5.2
+/.vs/ProjectEvaluation/algorithmsanddatastructures.projects.v5.2
